--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "dev": "NODE_ENV=development nodemon ."
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
