--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -20,7 +21,6 @@
     "eject": "react-scripts eject",
     "tailwind": "tailwindcss --input tailwind.css --output src/tailwind.css --watch",
     "dev": "concurrently --kill-others \"yarn tailwind\" \"yarn start\""
-
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "tailwindcss": "^3.4.1"
   }
 }
