--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "sharp": "^0.33.2",
     "twilio": "^4.21.0"
   },
   "devDependencies": {
